--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@layer base {
+    .input {
+      @apply border rounded-md block w-full text-gray-900 text-xl  px-4 py-2 focus:text-gray-700 focus:bg-gray-100 focus:outline-none;
+    }
+    .input-disable {
+        @apply border rounded-md block w-full text-gray-900 text-xl  px-4 py-2 bg-gray-200 cursor-not-allowed ;
+      }
+
+    .label {
+      @apply block mb-2 text-sm font-semibold text-gray-500 uppercase;
+    }
+    .textarea {
+      @apply border rounded-md block w-full  text-gray-900 text-xl h-[130px] px-4 py-2 focus:text-gray-700 focus:bg-gray-100 focus:outline-none;
+    }
+    .update-btn {
+      @apply font-bold  py-3 bg-blue-400 text-white  text-sm  uppercase rounded shadow-md hover:bg-blue-600 hover:shadow-lg w-full ;
+    }
+    .social-btn{
+        @apply  p-3 mx-4  text-white text-2xl rounded-full shadow-md;
+    }
+    .or{
+        @apply  flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5;
+    }
+    .btn{
+        @apply  px-7 py-3 bg-blue-400 text-white font-medium text-sm  uppercase rounded shadow-md hover:bg-blue-600 hover:shadow-lg w-full;
+    }
+    .alert{
+      @apply text-red-600;
+    }
+  }
